--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,5 +37,10 @@
   <string name="selectable_text_pref_title">Selectable text</string>
   <string name="selectable_text_pref_summary_on">Uneditable text is selectable.</string>
   <string name="selectable_text_pref_summary_off">Uneditable text is not selectable.</string>
+  <string name="opening_graphic">opening graphic</string>
+  <string name="json_the_arg_nauts">JSON + the arg(nauts)!</string>
+  <string name="start_game">Start Game</string>
+  <string name="board_size">Board size</string>
+  <string name="number_of_players">Number of players</string>
 
 </resources>
