--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,5 +42,7 @@
   <string name="start_game">Start Game</string>
   <string name="board_size">Board size</string>
   <string name="number_of_players">Number of players</string>
+  <string name="move">Move</string>
+  <string name="rotate">Rotate</string>
 
 </resources>
