--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,5 +44,6 @@
   <string name="number_of_players">Number of players</string>
   <string name="move">Move</string>
   <string name="rotate">Rotate</string>
+  <string name="fire_shots">Fire shots</string>
 
 </resources>
