--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,5 +45,6 @@
   <string name="move">Move</string>
   <string name="rotate">Rotate</string>
   <string name="fire_shots">Fire shots</string>
+  <string name="armada_ready_prepare_for_battle">Armada ready, prepare for battle!</string>
 
 </resources>
